Fixed issues not wrapping properly due to being inline-block

--- a/styles/content.less
+++ b/styles/content.less
@@ -356,7 +356,7 @@ html {
 						}
 
 						.issueTitle {
-							display: inline-block;
+							display: inline;
 							line-height: 24px;
 						}
 					}
